--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ cache
 artifacts
 broadcast
 typechain-types
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
